# schooling_fishes

./: .gitignore  Cargo.toml  ReadMe.md  rustfmt.toml
assets/shaders/: basic_model.vert  camera.frag  camera.vert  camera_texture.frag  camera_texture.vert  ocean_effect.frag  ocean_effect_funcs.frag  tile_texture.frag  tile_texture.vert  wavy_texture.frag  wavy_texture.vert  wiggle_shader.frag  wiggle_shader.vert
examples/: fish_wiggle.rs
opengl_lib/: Cargo.toml
opengl_lib/src/: camera.rs  lib.rs  mesh.rs  model.rs  shader.rs
src/: base_entity.rs  c2d_matrix.rs  camera.rs  cell_space_partition.rs  config_loader.rs  configuration.rs  constants.rs  entity_functions.rs  entity_traits.rs  fish_main.rs  game_world.rs  inverted_aab_box_2d.rs  main.rs  moving_entity.rs  param_loader.rs  path.rs  smoother.rs  steering_behavior.rs  transformations.rs  utils.rs  vehicle.rs  wall_2d.rs
src/core/: ai_scene.rs  assimp_scene.rs  camera.rs  mesh.rs  mod.rs  model.rs  model_mesh.rs  shader.rs  sprite_model.rs  texture.rs  tile_model.rs
src/shapes/: fish_mesh.rs  fish_sprite.rs  line_box.rs  mesh_plane.rs  mod.rs  plane.rs  small_fish.rs  triangle.rs
src/support/: ai_scene.rs  error.rs  mesh.rs  mod.rs  model.rs  model_mesh.rs  shader.rs  texture.rs
