[package]
name = "schooling_fishes"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glam = "0.25.0"
glfw = "0.54.0"
image = "0.24.7"
russimp = "2.0.6"
rand = "0.8.5"
log = "0.4.20"
rand_distr = "0.4.3"
#small_gl_core = { git = "https://github.com/Rockfish/small_gl_core.git" }
small_gl_core = { path = "../small_gl_core" }

[[example]]  # 1-getting_started
name = "fish_wiggle"
path = "examples/fish_wiggle.rs"