[package]
name = "opengl_lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glad-gl = { path = "../glad-gl" }
glam = "0.24.1"
image = "0.24.7"
russimp = "2.0.6"
ordered-float = { version = "3.0", default-features = false }
itertools = "0.11.0"
rand = "0.8.5"
